fix search input on navbar, footer margin and implement modal on mobile

--- a/optic-prive-front/src/app/components/footer/footer.component.scss
+++ b/optic-prive-front/src/app/components/footer/footer.component.scss
@@ -14,4 +14,11 @@ footer {
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
   }
+  .py-4 {
+    padding-bottom: 0em !important;
+  }
+
+  .py-5 {
+    padding-bottom: 0em !important;
+  }
 }
