--- a/optic-prive-front/src/app/components/header/header.component.scss
+++ b/optic-prive-front/src/app/components/header/header.component.scss
@@ -38,6 +38,7 @@ span.rotate {
     padding: 0px 30px;
     display: flex;
     justify-content: space-around;
+    margin-top: 2em;
 }
 
 .icon-bg {
@@ -104,53 +105,53 @@ span.rotate {
 
 /* STYLE MODAL */
 .modal-header {
-    border-bottom: none;
-    position: absolute;
-    width: 100%;
-    z-index: 1;
+  border-bottom: none;
+  position: absolute;
+  width: 100%;
+  z-index: 1;
 }
 
 .modal-content {
-    background-color: $secondary-color;
-    border: none;
-    border-radius: 0px;
+  background-color: $secondary-color;
+  border: none;
+  border-radius: 0px;
 }
 
 .modal-body {
-    .btn-primary {
-        background-color: $primary-color;
-        border: none;
-        border-radius: 0%;
-        color: $primary-contrast;
-        box-shadow: none !important;
-    }
+  .btn-primary {
+      background-color: $primary-color;
+      border: none;
+      border-radius: 0%;
+      color: $primary-contrast;
+      box-shadow: none !important;
+  }
 }
 
 .modal-img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .login-box {
-    padding: 0px;
+  padding: 0px;
 }
 
 .modal-client {
-    margin: 30px;
+  margin: 30px;
 
-    input {
-        margin: 10px 0px;
-        border-radius: 0px;
-        border: none;
-        box-shadow: none !important;
-    }
+  input {
+      margin: 10px 0px;
+      border-radius: 0px;
+      border: none;
+      box-shadow: none !important;
+  }
 
-    p {
-        font-size: 20px;
-        color: $secondary-contrast;
-    }
+  p {
+      font-size: 20px;
+      color: $secondary-contrast;
+  }
 
-    a {
-        color: $secondary-contrast;
-    }
+  a {
+      color: $secondary-contrast;
+  }
 }
